--- a/maintenance_project/index.html
+++ b/maintenance_project/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap/dist/css/bootstrap.min.css"/>
-    <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css"/>
-
     <title>maintenance_project</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="dist/build.js"></script>
+    <script src="/dist/build.js"></script>
   </body>
 </html>
